Update Lesson 11 with final

--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -20,6 +20,7 @@
 @import url(./_components/burger.less);
 @import url(./_components/lesson.less);
 @import url(./_components/utils.less);
+@import url(./_components/color-palette.less);
 
 * {
   box-sizing: border-box;
