--- a/contents/css/_components/brand.less
+++ b/contents/css/_components/brand.less
@@ -1,13 +1,16 @@
 @import "../vars.less";
 .brand {
+  display: flex;
+  align-items: center;
+  margin-right: 4em;
   &__svg {
     width: 115px;
     height: 35px;
     .slash {
-      fill: @primary20;
+      fill: @white;
     }
     .tag {
-      fill: @gray5;
+      fill: @white;
     }
     .letter {
       fill: @white;
@@ -15,18 +18,3 @@
   }
 }
 
-.homepage {
-  .brand {
-    &__svg {
-      margin-top: 5px;
-      width: 108px;
-      height: 30px;
-      @media only screen
-      and (max-width : 1024px) {
-        margin-top: 5px;
-        width: 115px;
-        height: 35px;
-      }
-    }
-  }
-}
