--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -1,7 +1,6 @@
 @import "../vars.less";
 .article__primary {
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Condensed', sans-serif;
     a {
       color: @primary;
       text-decoration: none;
@@ -21,7 +20,7 @@
   }
   h1 {
     font-size: 4em;
-    margin: .3em 0 1em;
+    margin: 0 0 1em;
     font-weight: 300;
     @media only screen
     and (max-width : 768px) {
