--- a/contents/css/vars.less
+++ b/contents/css/vars.less
@@ -11,5 +11,10 @@
 @primary5: lighten(@primary, 5%);
 @primary10: lighten(@primary, 10%);
 @primary20: lighten(@primary, 20%);
+@black: #20232a;
+@gray2: lighten(@black, 10%);
+
+@nav-height: 60px;
+
 
 @alt: spin(@primary, -20);
