--- a/contents/css/_components/header-nav.less
+++ b/contents/css/_components/header-nav.less
@@ -1,6 +1,5 @@
 @import "../vars.less";
 .header-nav {
-  align-self: center;
   @media only screen
   and (max-width : 768px) {
     align-self: stretch;
@@ -22,14 +21,28 @@
     padding: 0;
     margin: 0;
     display: flex;
+    height: @nav-height;
     @media only screen
     and (max-width : 768px) {
       flex-direction: column;
     }
   }
   &__item {
-    &:hover {
-      background-color: @primary20;
+    display: flex;
+    align-items: center;
+    &:hover, &.active {
+      background-color: @gray2;
+      position: relative;
+      &::after {
+        background-color: @primary10;
+        width: 100%;
+        height: 2px;
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+      }
       .header-nav__dropdown {
         @media only screen
         and (min-width : 769px) {
@@ -49,6 +62,7 @@
     display: block;
     text-decoration: none;
     padding: .5em 1em;
+    font-weight: 100;
   }
   &__dropdown {
     @media only screen
