--- a/contents/css/_components/nav-content.less
+++ b/contents/css/_components/nav-content.less
@@ -1,6 +1,6 @@
 @import "../vars.less";
 .nav-content {
-  padding: .5em 1em;
+  height: @nav-height;
   @media only screen
   and (max-width : 768px) {
     padding: 0;
