--- a/contents/css/_components/tags.less
+++ b/contents/css/_components/tags.less
@@ -4,6 +4,7 @@
   padding: .5em 1em;
   background-color: #FAFAFA;
   border-radius: .4em;
+  max-width: 278px;
   @media only screen
   and (max-width : 768px) {
     display: none;
