--- a/contents/css/_components/titlebar.less
+++ b/contents/css/_components/titlebar.less
@@ -1,15 +1,11 @@
 @import "../vars.less";
 .titlebar {
-  padding: .3em 1em;
-  color: @white;
+  height: @nav-height;
+  color: @black;
   border-radius: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow:
-    0 5px 10px -6px rgba(0, 0, 0, 0.5) inset,
-    0 1px 1px rgba(0,0,0,.05) inset
-  ;
   @media only screen
   and (max-width : 425px) {
     padding-left: 30px;
@@ -22,7 +18,6 @@
 
   &__main {
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
     @media only screen
     and (min-width: 425px)  {
