--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Roboto+Condensed:400,700,300|Oxygen+Mono);
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900');
 
 @import (inline) url(prism.css);
 @import (inline) url(font-awesome.min.css);
@@ -32,10 +32,11 @@ html, body {
 
 body {
   margin: 0;
-  font: 14px 'Droid Sans', sans-serif;
+  font: 17px 'Droid Sans', sans-serif;
   line-height: 1.42857143;
   display: flex;
   flex-direction: column;
+  margin-top: @nav-height * 2;
 }
 
 a {
@@ -89,32 +90,41 @@ a {
 }
 
 .global-nav {
-  background-color: @primary10;
-  & > * {
-    background-color: @primary;
-  }
+  background-color: @black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;  
 }
 
 .main-titlebar {
-  background-color: @primary20;
+  background-color: @gray;
+  position: fixed;
+  top: @nav-height;
+  left: 0;
+  right: 0;
+  z-index: 100;  
   & > * {
-    background-color: @secondary;
+    background-color: @gray;
   }
 }
 
 .global-footer {
-  background-color: @gray10;
+  background-color: @black;
+  position: relative;
+  z-index: 200;
   & > * {
-    background-color: @gray;
+    background-color: @black;
     padding: 1.3em;
   }
   p {
     margin: 0;
-    color: @white;
+    color: @gray;
   }
   svg {
     .slash, .tag, .letter {
-      fill: @white;
+      fill: @gray;
     }
   }
 }
@@ -129,7 +139,6 @@ a {
 code {
   color: @primary;
   background-color: lighten(@primary, 43%);
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   padding: 1px 5px;
   font-size: .9em;
   border-radius: .2em;
