--- a/contents/css/_components/nav-content.less
+++ b/contents/css/_components/nav-content.less
@@ -1,6 +1,9 @@
 @import "../vars.less";
 .nav-content {
-  height: @nav-height;
+  @media only screen
+  and (min-width : 426px) {
+    height: @nav-height;
+  }
   @media only screen
   and (max-width : 768px) {
     padding: 0;
