--- a/contents/css/_components/sidenav.less
+++ b/contents/css/_components/sidenav.less
@@ -3,6 +3,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  z-index: 200;
   .trigger {
     display: none;
     cursor: pointer;
@@ -22,7 +23,7 @@
       background-color: @alt;
       box-shadow: 3px 1px 10px -4px #000;
       z-index: -1;
-      line-height: 1em;
+      line-height: .9em;
       color: @white;
       transition: .2s all;
       &.hide {
