--- a/contents/css/_components/grid.less
+++ b/contents/css/_components/grid.less
@@ -2,7 +2,7 @@
   display: grid;
   &--homepage {
     grid-gap: 1em;
-    margin: 1em;
+    margin: 1em 0;
     @media only screen
     and (min-width: 768px)  {
       grid-template-columns: 1fr 1fr;
