--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -20,8 +20,12 @@
   }
   h1 {
     font-size: 4em;
-    margin: 0 0 1em;
+    margin: 0 0 .5em;
     font-weight: 300;
+    background-image: linear-gradient(45deg, @primary 10%, @black);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     @media only screen
     and (max-width : 768px) {
       font-size: 3em;
