--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -57,6 +57,20 @@ a {
   white-space: pre-wrap;
 }
 
+.lessons {
+  .lesson__list {
+    padding-left: 20px;
+  }
+  @media only screen
+  and (max-width : 768px) {
+    padding: 1em;
+  }
+  @media only screen
+  and (max-width : 425px) {
+    padding: 1em 1em 1em 30px;
+  }
+}
+
 .container {
   // display: flex;
   // justify-content: center;
@@ -86,6 +100,20 @@ a {
       justify-content: space-between;
       padding: .5em 1em;
     }
+    @media only screen
+    and (max-width : 424px) {
+      padding: 13px 1em;
+    }
+    &.active::after {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,.5);
+      z-index: -1;
+    }
   }
 }
 
@@ -95,7 +123,7 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 100;  
+  z-index: 200;  
 }
 
 .main-titlebar {
