--- a/templates/article.jade
+++ b/templates/article.jade
@@ -25,7 +25,7 @@ block header
     div.titlebar__date
       ul.layout.layout--date
         li.layout__item
-          i.fa.fa-calendar
+          i.fas.fa-calendar-alt
         li.layout__item
           span.date= moment(page.date).format('MMMM D, YYYY')
 block content
@@ -63,7 +63,7 @@ block content
             each data, label in page.metadata.downloads
               li.downloads__item
                 a(href=data.file, class=(data.btn ? `btn--${data.btn}` : '')).btn #{label}
-                  i.fa.fa-download
+                  i.fas.fa-download
 
         if page.metadata.tags
           h3 Tags in Lesson
