--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -33,6 +33,13 @@ html(lang='en')
               for nav in navs
                 li(class=`header-nav__item--${nav.class}`).header-nav__item
                   a(href=`${nav.url}`).header-nav__link= nav.title
+                  if nav.subNav
+                    - var articles = env.helpers.getArticles(contents);
+                      ul.header-nav__subNav
+                        each article in articles  
+                          li
+                            a(href=article.url)= article.title
+                              span.date= moment(article.date).format('MMMM D, YYYY')
 
     header.main-titlebar.container
       div.container__center
@@ -56,6 +63,7 @@ html(lang='en')
             +logo('simple-row--svg',80, 25)
     script(src='/js/prism.js')
     script(src='/js/global.js')
+    script(src='/js/fontawesome-all.min.js')
     block addlocaljs
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
