Update tags to dispalay from json

--- a/contents/css/_components/button.less
+++ b/contents/css/_components/button.less
@@ -30,7 +30,7 @@
   i {
     margin-left: .5em;
   }
-  &--primary {
+  &--primary, &.active {
     color: @white;
     background-color: @primary;
     &:hover {
