--- a/templates/article.jade
+++ b/templates/article.jade
@@ -2,6 +2,7 @@
 extends layout
 
 include mixins/_title
+include mixins/_badge
 
 block addlocalcss
   if page.metadata.localcss
@@ -71,9 +72,7 @@ block content
             each val, index in page.metadata.tags
               .tags__item
                 div.data
-                  span(class=`badge--${val.label}`).badge
-                    i(class=val.icon) 
-                    = val.label
+                  +badge(val.label)
                 ul.tags__list
                   each tag in val.data
                     li.tags__list-item
