--- a/contents/css/_components/grid.less
+++ b/contents/css/_components/grid.less
@@ -9,10 +9,10 @@
       grid-template-rows: 300px;
       grid-auto-rows: 300px;
     }
-    @media only screen
-    and (max-width : 1024px) {
-      grid-template-rows: 230px;
-      grid-auto-rows: 230px;
-    }
+    // @media only screen
+    // and (max-width : 1024px) {
+    //   grid-template-rows: 230px;
+    //   grid-auto-rows: 230px;
+    // }
   }
 }
