--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -20,7 +20,7 @@
   }
   h1 {
     font-size: 4em;
-    margin: 0 0 .5em;
+    margin: 0 0 1rem;
     font-weight: 300;
     background-image: linear-gradient(45deg, @primary 10%, @black);
     -webkit-background-clip: text;
