--- a/contents/css/_components/titlebar.less
+++ b/contents/css/_components/titlebar.less
@@ -6,9 +6,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  @media only screen
-  and (max-width : 425px) {
-    padding-left: 30px;
+  &:not(.homepage) {
+    @media only screen
+    and (max-width : 425px) {
+      padding-left: 30px;
+    }
   }
   // @media only screen
   // and (max-width: 425px)  {
