--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -22,6 +22,7 @@
 @import url(./_components/utils.less);
 @import url(./_components/color-palette.less);
 @import url(./_components/table.less);
+@import url(./_components/alert.less);
 
 * {
   box-sizing: border-box;
@@ -33,7 +34,7 @@ html, body {
 
 body {
   margin: 0;
-  font: 17px 'Droid Sans', sans-serif;
+  font: @font-size 'Droid Sans', sans-serif;
   line-height: 1.42857143;
   display: flex;
   flex-direction: column;
@@ -85,6 +86,10 @@ a {
     // flex: 0 1 1170px;
     max-width: 1170px;
     margin: 0 auto;
+    @media only screen
+    and (max-width : 1170px) {
+      padding: 0 1em;
+    }
   }
 }
 
@@ -105,11 +110,11 @@ a {
     and (max-width : 768px) {
       align-items: center;
       justify-content: space-between;
-      padding: .5em 1em;
+      padding: 13px 0;
     }
     @media only screen
     and (max-width : 424px) {
-      padding: 13px 1em;
+      padding: 13px 0;
     }
     &.active::after {
       content: "";
