--- a/contents/lessons/lesson-6/css/style.css
+++ b/contents/lessons/lesson-6/css/style.css
@@ -1,7 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: #c6cbcc;
-  font: 15px arial;
-  margin: 20px;
+  font: 16px arial;
+  margin: 1em;
 }
 
 h1, h2, h3, h4, p, ul, figure {
@@ -11,9 +15,9 @@ h1, h2, h3, h4, p, ul, figure {
 }
 
 .wrapper {
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 1em;
   background-color: #fff;
 }
 
@@ -27,120 +31,116 @@ h1, h2, h3, h4, p, ul, figure {
 
 .global-nav {
   background-color: #231f20;
-  padding: 10px;
-  margin-bottom: 10px;
+  padding: 1em;
+  margin-bottom: 1em;
 }
-.global-nav:after {
-  display: block;
-  content: "";
-  clear: both;
-}
-.global-nav img, .global-nav ul {
-  float: left;
-}
+
 .global-nav ul {
-  margin-left: 10px;
+  display: flex;
 }
-.global-nav ul li {
-  float: left;
-}
+
 .global-nav ul li a {
-  padding: 0 20px;
+  padding: .5em 1em;
   color: white;
   text-decoration: none;
   display: block;
-  line-height: 30px;
   background-color: #080707;
-  margin-left: 10px;
+  margin-right: .5em;
 }
+
 .global-nav ul li a:hover {
   background-color: #594f51;
 }
 
 .hero {
-  margin-bottom: 10px;
-}
-.hero img {
-  display: block;
-}
-.hero figcaption {
-  background-color: #ead98b;
-  padding: 20px;
+  margin-bottom: 1em;
 }
 
-.promos:after {
-  content: "";
+.hero img {
+  max-width: 100%;
   display: block;
-  clear: both;
 }
+
+.hero figcaption {
+  background-color: #ead98b;
+  padding: 1em;
+}
+
+.promos ul {
+  display: flex;
+}
+
 .promos li {
-  float: left;
-  width: 325px;
+  flex: 1;
   padding-bottom: 40px;
-  margin-right: 12px;
+  margin-right: 1em;
 }
+
+.promos img {
+  max-width: 100%;
+}
+
 .promos li:last-child {
   margin-right: 0;
 }
+
 .promos h2 {
   font-size: 20px;
   font-weight: bold;
   margin: 1em 0;
 }
+
 .promos p {
   line-height: 1.8em;
 }
 
-.more-content:after {
-  content: "";
-  display: block;
-  clear: both;
+.more-content ul {
+  display: flex;
 }
+
 .more-content li {
-  box-sizing: border-box;
-  height: 270px;
-  float: left;
-  margin-right: 10px;
-  width: 242px;
+  flex: 1;
+  margin-right: 1em;
   font-size: 12px;
   border: 1px solid silver;
   padding: 10px;
 }
+
 .more-content li img {
   max-width: 100%;
 }
+
 .more-content li:last-child {
   margin-right: 0;
 }
+
 .more-content li p {
   line-height: 1.5em;
   padding: 10px;
 }
+
 .more-content li p a {
   color: #955251;
   display: block;
   text-align: right;
   font-size: 15px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 1em;
   text-decoration: none;
 }
 
 .global-footer {
-  margin-top: 20px;
+  margin-top: 1em;
   background-color: #414042;
 }
-.global-footer:after {
-  content: "";
-  display: block;
-  clear: both;
+
+.global-footer ul {
+  display: flex;
 }
-.global-footer li {
-  float: left;
-}
+
 .global-footer li a {
   display: block;
-  padding: 20px;
+  padding: 1em;
   text-decoration: none;
   color: #ffffff;
 }
