--- a/contents/css/components/_nav-content.scss
+++ b/contents/css/components/_nav-content.scss
@@ -1,8 +1,7 @@
-@import "../vars.less";
 .nav-content {
   @media only screen
   and (min-width : 767px) {
-    height: @nav-height;
+    height: $nav-height;
   }
   @media only screen
   and (max-width : 768px) {
