--- a/contents/css/components/_table.scss
+++ b/contents/css/components/_table.scss
@@ -1,5 +1,3 @@
-@import "../vars.less";
-
 .tag-types {
   margin: 0;
   padding: 0;
@@ -16,7 +14,7 @@ table.table {
   @media only screen
   and (min-width : 424px) {      
     border-collapse: collapse;
-    border: 1px solid @gray10;
+    border: 1px solid $gray10;
     width: 100%;
   }
   @media only screen
@@ -26,7 +24,7 @@ table.table {
     tr {
       display: block;
       margin: 1em 0;
-      border: 1px solid @gray10;
+      border: 1px solid $gray10;
       padding: 1em;      
       padding-left: 40px;
     }
@@ -39,7 +37,7 @@ table.table {
       
     }
     tr.active {
-      background-color: @gray20;
+      background-color: $gray20;
     }
     tr.header {
       display: table-row;
@@ -51,7 +49,7 @@ table.table {
   th, td {
     @media only screen
     and (min-width : 424px) {      
-      border-bottom: 1px solid @gray10;
+      border-bottom: 1px solid $gray10;
       text-align: left;
       padding: .5em 1em;
     }
@@ -71,7 +69,7 @@ table.table {
   }
   th {
     border-bottom-width: 2px;
-    color: @primary;
+    color: $primary;
     @media only screen
     and (max-width : 425px) {
       display: none;        
