--- a/contents/css/components/_article.scss
+++ b/contents/css/components/_article.scss
@@ -1,5 +1,3 @@
-@import "../vars.less";
-
 .article {
   display: grid;
   margin-top: 1em;
@@ -43,10 +41,10 @@
         padding: 2em;
         position: fixed;
         width: 100%;
-        top: @nav-height * 2;
-        height: ~"calc(100vh - 120px)";
-        background-color: @gray20;
-        border-left: 1px solid @gray15;
+        top: $nav-height * 2;
+        height: calc(100vh - 120px);
+        background-color: $gray20;
+        border-left: 1px solid $gray15;
       }
     }
     @media only screen and (min-width : 769px) {
