--- a/contents/css/components/_brand.scss
+++ b/contents/css/components/_brand.scss
@@ -1,4 +1,3 @@
-@import "../vars.less";
 .brand {
   display: flex;
   align-items: center;
@@ -7,13 +6,13 @@
     width: 115px;
     height: 35px;
     .slash {
-      fill: @white;
+      fill: $white;
     }
     .tag {
-      fill: @white;
+      fill: $white;
     }
     .letter {
-      fill: @white;
+      fill: $white;
     }
   }
 }
