--- a/contents/css/components/_burger.scss
+++ b/contents/css/components/_burger.scss
@@ -1,5 +1,3 @@
-@import "../vars.less";
-
 .burger {
   display: none;
   @media only screen
@@ -30,7 +28,7 @@
     }
   }
   transition: all .2s;
-  border: 1px solid @white;
+  border: 1px solid $white;
   padding: 4px;
   border-radius: 3px;
   width: 25px;
@@ -40,7 +38,7 @@
   }
   .line {
     transition: all .2s;
-    border-bottom: 1px solid @white;
+    border-bottom: 1px solid $white;
     margin-bottom: 3px;
     &:last-of-type {
       margin-bottom: 0;
