--- a/contents/css/components/_color-palette.scss
+++ b/contents/css/components/_color-palette.scss
@@ -1,5 +1,3 @@
-@import "../vars.less";
-
 .color-palette {
   margin: 0;
   padding: 0 !important;
@@ -9,7 +7,7 @@
   grid-gap: 1em;
   &__palette {
     padding: .5em;
-    border: 1px solid @gray15;
+    border: 1px solid $gray15;
     text-align: center;
     font-size: 2em;
     p {
@@ -27,7 +25,7 @@
   display: flex;
   li {
     margin-right: 1em;
-    border: 1px solid @gray15;
+    border: 1px solid $gray15;
     padding: 1em;
   }
   &.PDF {
