--- a/contents/css/components/_header-nav.scss
+++ b/contents/css/components/_header-nav.scss
@@ -1,9 +1,8 @@
-@import "../vars.less";
 .header-nav {
   @media only screen
   and (max-width : 768px) {
     align-self: stretch;
-    background-color: @primary5;
+    background-color: $primary5;
     box-shadow:
       0 5px 10px -6px rgba(0, 0, 0, 0.5) inset,
       0 1px 1px rgba(0,0,0,.05) inset
@@ -24,7 +23,7 @@
     display: flex;
     @media only screen
     and (min-width : 769px) {
-      height: @nav-height;
+      height: $nav-height;
     }
     @media only screen
     and (max-width : 768px) {
@@ -38,10 +37,10 @@
       align-items: center;
     }    
     &:hover, &.active {
-      background-color: @gray2;
+      background-color: $gray2;
       position: relative;
       &::after {
-        background-color: @primary10;
+        background-color: $primary10;
         width: 100%;
         height: 2px;
         content: "";
@@ -60,7 +59,7 @@
     @media only screen
     and (max-width : 768px) {
       &:not(:last-of-type) {
-        border-bottom: 1px solid @primary;
+        border-bottom: 1px solid $primary;
       }
     }
     @media only screen
@@ -74,7 +73,7 @@
     
   }
   &__link {
-    color: @white;
+    color: $white;
     display: block;
     text-decoration: none;
     padding: .5em 1em;
@@ -87,8 +86,8 @@
       padding: 0;
       margin: 0;
       position: absolute;
-      background-color: @primary20;
-      border: 1px solid @primary;
+      background-color: $primary20;
+      border: 1px solid $primary;
       box-shadow: 0 5px 10px -3px rgba(0,0,0,.5);
       display: none;
     }
@@ -97,7 +96,7 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      background-color: @primary20;
+      background-color: $primary20;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       box-shadow: 0 5px 10px -3px rgba(0,0,0,.3) inset, 0 -5px 3px -3px rgba(0,0,0,.1) inset;
@@ -106,17 +105,17 @@
   &__drop-item {
     @media only screen
     and (min-width : 769px) {
-      border-bottom: 2px solid @primary;
+      border-bottom: 2px solid $primary;
       min-width: 170px;
     }
     a {
       display: block;
-      color: @white;
+      color: $white;
       text-decoration: none;
       padding: .5em;
       &:hover {
         background-color: #fff;
-        color: @primary
+        color: $primary
       }
     }
     @media only screen
@@ -143,7 +142,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    background-color: @gray20;
+    background-color: $gray20;
     box-shadow: 0 0 10px rgba(0,0,0,.5);
     @media only screen
     and (max-width : 768px) {
@@ -158,13 +157,13 @@
       @media only screen
       and (min-width : 768px) {
         &:not(:last-of-type) {
-          border-bottom: 1px solid @black;
+          border-bottom: 1px solid $black;
         }
       }
       &:hover {
-        background-color: @primary20;
+        background-color: $primary20;
         // a {
-          color: @white;
+          color: $white;
         // }
       }
     }
@@ -181,7 +180,7 @@
       white-space: nowrap;
       font-size: .7em;
       margin-left: 1em;
-      color: @black;
+      color: $black;
       @media only screen
       and (max-width : 769px) {
         display: none;
