--- a/contents/css/components/_lesson.scss
+++ b/contents/css/components/_lesson.scss
@@ -1,5 +1,3 @@
-@import "../vars.less";
-
 .lesson {
   padding: 1em;
   box-shadow: none;
@@ -17,7 +15,7 @@
   }
   &__link {
     text-decoration: none;
-    color: @primary;
+    color: $primary;
     font-size: 2em;
     font-weight: 700;
     line-height: 1em;
@@ -26,7 +24,7 @@
     }
   }
   &__date {
-    color: @primary;
+    color: $primary;
   }
   &__content {
     flex: 1;
