--- a/contents/css/components/_markdowned.scss
+++ b/contents/css/components/_markdowned.scss
@@ -1,8 +1,7 @@
-@import "../vars.less";
 .article__primary {
   h1, h2, h3, h4, h5, h6 {
     a {
-      color: @primary;
+      color: $primary;
       text-decoration: none;
       &:hover {
         text-decoration: underline;
@@ -16,13 +15,13 @@
     margin-top: 20px;
     margin-bottom: 20px;
     border: 0;
-    border-top: 1px solid @gray15;
+    border-top: 1px solid $gray15;
   }
   h1 {
     font-size: 4em;
     margin: 0 0 1rem;
     font-weight: 300;
-    background-image: linear-gradient(45deg, @primary 10%, @black);
+    background-image: linear-gradient(45deg, $primary 10%, $black);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -33,7 +32,7 @@
     }
   }
   h2 {
-    color: @primary10;
+    color: $primary10;
     font-size: 1.8em;
     line-height: 1.8;
     font-weight: 700;
@@ -74,15 +73,15 @@
   }
   table {
     border-collapse: collapse;
-    border: 1px solid @gray10;
+    border: 1px solid $gray10;
     th, td {
-      border-bottom: 1px solid @gray10;
+      border-bottom: 1px solid $gray10;
       text-align: left;
       padding: .5em 1em;
     }
     th {
       border-bottom-width: 2px;
-      color: @primary;
+      color: $primary;
     }
   }
 }
