--- a/contents/css/components/_sidenav.scss
+++ b/contents/css/components/_sidenav.scss
@@ -1,4 +1,3 @@
-@import "../vars.less";
 .sidenav {
   list-style: none;
   padding: 0;
@@ -20,11 +19,11 @@
       top: 64px;
       left: 70vw;
       padding: 1px 5px 5px 4px;
-      background-color: @alt;
+      background-color: $alt;
       box-shadow: 3px 1px 10px -4px #000;
       z-index: -1;
       line-height: .9em;
-      color: @white;
+      color: $white;
       transition: .2s all;
       &.hide {
         margin-left: -22px;
@@ -38,7 +37,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px,1fr));
     margin: -1em -1em 1em;
-    border-bottom: 1px solid @primary;
+    border-bottom: 1px solid $primary;
     justify-content: space-around;
   }
   @media only screen
@@ -48,7 +47,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    background-color: @alt;
+    background-color: $alt;
     width: 70vw;
     margin: 0;
     display: flex;
@@ -63,7 +62,7 @@
   &__item {
     @media only screen
     and (max-width : 425px) {
-      border-bottom: 1px solid @primary20;
+      border-bottom: 1px solid $primary20;
       font-size: 1.5em;
       flex: 1;
       display: flex;
@@ -74,7 +73,7 @@
     display: block;
     padding: .5em 1em;
     text-decoration: none;
-    color: @primary;
+    color: $primary;
     border-left: 2px solid transparent;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -87,29 +86,29 @@
     @media only screen
     and (min-width : 769px) {
       &.active {
-        border-left-color: @primary;
-        color: @primary;
+        border-left-color: $primary;
+        color: $primary;
       }
       &:not(.active):hover {
-        border-left-color: @primary10;
-        color: @primary10;
+        border-left-color: $primary10;
+        color: $primary10;
       }
     }
     @media only screen
     and (min-width : 426px) and (max-width : 768px) {
       &.active {
-        background-color: @primary;
-        color: @white;
+        background-color: $primary;
+        color: $white;
       }
       &:not(.active):hover {
-        background-color: @primary10;
-        color: @white;
+        background-color: $primary10;
+        color: $white;
       }
     }
     @media only screen
     and (max-width : 425px) {
       padding: .5em 1em;
-      color: @white;
+      color: $white;
       text-shadow: 0 1px 1px rgba(0,0,0,.5);
       &::after { content:" \203A";}
       flex: 1;
