--- a/contents/css/components/_titlebar.scss
+++ b/contents/css/components/_titlebar.scss
@@ -1,7 +1,6 @@
-@import "../vars.less";
 .titlebar {
-  height: @nav-height;
-  color: @black;
+  height: $nav-height;
+  color: $black;
   border-radius: 0;
   display: flex;
   justify-content: space-between;
