Fix layout issues

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -7,7 +7,7 @@ block append vars
   - bodyclass = 'homepage'
 
 block header
-  div.titlebar.homepage
+  div.titlebar.no-nav
     h1.titlebar__main
       +title(locals.description)
     p.titlebar__date= locals.startDate + " to " + locals.endDate
