--- a/templates/table.jade
+++ b/templates/table.jade
@@ -9,7 +9,7 @@ block addlocaljs
 
 
 block header
-  div.titlebar
+  div.titlebar.no-nav
     h1.titlebar__main
       +title(page.metadata.title)
 
