--- a/templates/single.jade
+++ b/templates/single.jade
@@ -1,10 +1,10 @@
 extends layout
 block append vars
-  - bodyclass = 'article-detail'
+  - bodyclass = 'homepage'
 block prepend title
   | #{ page.title + " - "}
 block header
-  div.titlebar
+  div.titlebar.no-nav
     - const [first, ...rest] = page.title.split(' ')
     h1.titlebar__main
       span.caps= first
