--- a/contents/css/components/_alert.scss
+++ b/contents/css/components/_alert.scss
@@ -29,6 +29,12 @@
   h2 {
     margin: 0;
     font-weight: normal;
+    @media only screen
+    and (max-width: 424px)  {
+      & + p {
+        font-size: .9em;
+      }
+    }
   }
   p {
     margin: 0;
