--- a/contents/css/components/_header-nav.scss
+++ b/contents/css/components/_header-nav.scss
@@ -37,17 +37,20 @@
       align-items: center;
     }    
     &:hover, &.active {
-      background-color: $gray2;
-      position: relative;
-      &::after {
-        background-color: $primary10;
-        width: 100%;
-        height: 2px;
-        content: "";
-        display: block;
-        position: absolute;
-        bottom: 0;
-        left: 0;
+      @media only screen
+      and (min-width : 768px) {
+        background-color: $gray2;
+        position: relative;
+        &::after {
+          background-color: $primary10;
+          width: 100%;
+          height: 2px;
+          content: "";
+          display: block;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+        }
       }
       .header-nav__dropdown {
         @media only screen
