--- a/contents/css/components/_lesson.scss
+++ b/contents/css/components/_lesson.scss
@@ -5,6 +5,11 @@
   flex-direction: column;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
+  &.active {
+    grid-column: 1 / -1;
+    grid-row: 1;
+    font-size: 1.2em;
+  }
   &__title {
     margin: 0;
     line-height: 1em;
