--- a/contents/css/components/_lesson.scss
+++ b/contents/css/components/_lesson.scss
@@ -3,12 +3,12 @@
   box-shadow: none;
   display: flex;
   flex-direction: column;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
+  background-color: $gray20;
+  border: 1px solid $gray10;
   &.active {
     grid-column: 1 / -1;
     grid-row: 1;
-    font-size: 1.2em;
+    // font-size: 1.2em;
     position: relative;
     &::before {
       content: "Today's Lesson";
